--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,12 @@ Authors@R: c(
       role = c("aut", "cre", "cph")),
     person("Constantinos", "Christodoulides", role = c("aut", "cph"))
     )
-Description: Performs frequentist inference for the extremal index using the methodologies described in Suveges and Davison (2010)  <doi:10.1214/09-AOAS292> and in Northrop (2015) <doi:10.1007/s10687-015-0221-5>.
+Description: Performs frequentist inference for the extremal index using the 
+    methodologies described in Suveges and Davison (2010)  <doi:10.1214/09-AOAS292> 
+    and in Northrop (2015) <doi:10.1007/s10687-015-0221-5>. This is done in two 
+    ways, based on the two main forms of extreme value theory. One is based on 
+    exceedances of a high threshold, the other is based on the behaviour of the 
+    r largest order statistics within a block, for small values of r.
 Imports: graphics,
     methods,
     stats
