--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,9 +10,9 @@ Authors@R: c(
 Description: Performs frequentist inference for the extremal index using the 
     methodologies described in Suveges and Davison (2010)  <doi:10.1214/09-AOAS292> 
     and in Northrop (2015) <doi:10.1007/s10687-015-0221-5>. This is done in two 
-    ways, based on the two main forms of extreme value theory. One is based on 
-    exceedances of a high threshold, the other is based on the behaviour of the 
-    r largest order statistics within a block, for small values of r.
+    ways, based on the two main forms of extreme value theory. One uses threshold
+    inter-exceedance times based on the K-gaps model and the other one is based 
+    on block maxima.
 Imports: graphics,
     methods,
     stats
